--- a/index.html
+++ b/index.html
@@ -19,7 +19,12 @@
     <h2 license>For the Public Domain. Please distribute freely.</h2>
 </header>
 
-<main></main>
+<form>
+    <button type="button" onclick="convertToSingleColumn()">Single Column</button>
+</form>
+
+<main>
+</main>
 
 
 </body>
