--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
 <header>
     <h1 title>The Tao Te Ching</h1>
-    <p subtitle>A Modern Paraphrase (1996) by:</p>
-    <p by>Translated by John H. McDonald</p>
+    <p subtitle>A Modern Paraphrase (1996), Translated by John H. McDonald</p>
     <p license>For the Public Domain. Please distribute freely.</p>
 </header>
 
