--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <header>
     <h1 title>The Tao Te Ching</h1>
+    <p author>By Lao Tzu, 400BC</p>
     <p subtitle>A Modern Paraphrase (1996), Translated by John H. McDonald</p>
     <p license>For the Public Domain. Please distribute freely.</p>
 </header>
@@ -278,7 +279,7 @@
                 Receptive as a valley. <br>
                 Turbid as muddied water.</p>
             <p>Who can be still <br>
-                until their mud settles <br>
+                <mark>until their mud settles</mark> <br>
                 and the water is cleared by itself? <br>
                 Can you remain tranquil until right action occurs by itself?</p>
             <p>The Master doesn't seek fulfillment. <br>
@@ -360,7 +361,7 @@
             <p>Renounce knowledge and your problems will end. <br>
                 What is the difference between yes and no? <br>
                 What is the difference between good and evil? <br>
-                Must you fear what others fear? <br>
+                <mark>Must you fear what others fear?</mark> <br>
                 Nonsense, look how far you have missed the mark!</p>
             <p>Other people are joyous, <br>
                 as though they were at a spring festival. <br>
@@ -531,7 +532,7 @@
                 She is there to help all of creation, <br>
                 and doesn't abandon even the smallest creature. <br>
                 This is called embracing the light.</p>
-            <p>What is a good person but a bad person's teacher? <br>
+            <p>What <mark>is a good person but a bad person's teacher?</mark> <br>
                 What is a bad person but raw material for his teacher? <br>
                 If you fail to honor your teacher or fail to enjoy your student,
                 <br>
