--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header>
     <h1 title>The Tao Te Ching</h1>
     <p author>By Lao Tzu, 400BC</p>
-    <p subtitle>A Modern Paraphrase (1996), Translated by <span translator>John H. McDonald</span></p>
+    <p subtitle>A Modern Paraphrase (1996), Translated by<br><span translator>John H. McDonald</span></p>
     <p license>For the Public Domain. Please distribute freely.</p>
 </header>
 
