--- a/index.html
+++ b/index.html
@@ -1585,6 +1585,12 @@
     </article>
 </main>
 
+<hr>
+
+<footer>
+    <blockquote>“It is only when a mosquito lands on your testicles that you realise there is always a way to solve problems without using violence”<br><span author>—Lao Tzu<br><small>(Author of The Tao Te Ching)</small></span></blockquote>
+</footer>
+
 
 </body>
 </html>
