--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                 She is there to help all of creation, <br>
                 and doesn't abandon even the smallest creature. <br>
                 This is called embracing the light.</p>
-            <p>What <mark>is a good person but a bad person's teacher?</mark> <br>
+            <p>What is a good person but a bad person's teacher? <br>
                 What is a bad person but raw material for his teacher? <br>
                 If you fail to honor your teacher or fail to enjoy your student,
                 <br>
