--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 Receptive as a valley. <br>
                 Turbid as muddied water.</p>
             <p>Who can be still <br>
-                <mark>until their mud settles</mark> <br>
+                until their mud settles <br>
                 and the water is cleared by itself? <br>
                 Can you remain tranquil until right action occurs by itself?</p>
             <p>The Master doesn't seek fulfillment. <br>
